# pybind11_starter

./: .gitmodules  README.md
bridge_api/: CMakeLists.txt  example.cpp  example.pyd.static  test.py
includes/: utils.h  utils_xyz.h
